Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/4980495/std/Test.java
/*
 * @test  /nodynamiccopyright/
 * @bug 4980495 6260444
 * @compile/fail/ref=Test.out -XDrawDiagnostics Test.java p1/A1.java p2/A2.java
 *
 */

package p;

import p1.A1.f;
import p2.A2.f;

public class Test {

    public static void main(String argv[]) {
        new f();
    }
}
